concord_macros/tests/dsl/fail/fail_policies_rejects_behavior.stderr
error: invalid item in policies block; expected retry, cache, rate_limit, or observe
 --> tests/dsl/fail/fail_policies_rejects_behavior.rs:8:13
  |
8 |             behavior read {
  |             ^^^^^^^^
